--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1mdc-hq2PdRIDBtxuU0-9eY6Pzohzb8I&libraries=places"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
